add action and redux for auth

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^16.11.42",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@types/node-sass": "^4.11.2",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,11 +22,22 @@
     "sass": "^1.53.0",
     "scss": "^0.2.4",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "joi": "^17.6.0",
+    "joi-browser": "^13.4.0",
+    "react-joi": "^1.1.0",
+    "react-joi-validation": "^1.7.0",
+    "react-bootstrap": "^2.4.0",
+    "react-intl": "^6.0.3",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-toast-notifications": "^2.5.1",
+    "spinners-react": "^1.0.7",
+    "zxcvbn": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && REACTBUILDVERSION=`git rev-parse --abbrev-ref HEAD`--$(date +%Y%m%d)-$(date +%T) && sed -i -- 's/%REACTBUILDVERSION%/'$REACTBUILDVERSION'/g' build/index.html && echo React Build Version = $REACTBUILDVERSION",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
