--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_STORAGE_KEY=00xvtpkbnb2ah
-REACT_APP_KEY=00xvtpkbnb2ah
+REACT_APP_API_KEY=88902032349
 
-REACT_APP_BASE_URL_API=https://api.omkurir.hiperbite.com
+REACT_APP_BASE_URL_API=https://4000-omkurir-server-ivu6g5b1kpz.ws-eu53.gitpod.io
+#REACT_APP_BASE_URL_API=https://api.omkurir.hiperbite.com
