--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.0.3",
     "react-lineicons": "^3.0.0",
+    "react-placeholder-loading": "^0.5.30",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
